# GFSBUILDS

./: GFSBUILDS.TXT  GFSBUILDS.TXT.py  OLDvsNEW.txt  README  README.md  To build the Universe...  blacklist.txt  build_the_universe.bash  build_the_universe.sh  build_the_universe.sh-bak  configs.bash  configs.sh  gnome-template-45.rc  prepare_cosmos.sh
.proxeiro/: GEN-GFSBUILDS.sh  build_the_universe.bash  cat_output.sh  empty  gnome-files  sh_creator.sh  tgz2txz.sh
BLACKLIST45/adwaita-icon-theme/: adwaita-icon-theme.SlackBuild
BLACKLIST45/at-spi2-core/: at-spi2-core.SlackBuild
BLACKLIST45/cairo/: cairo.SlackBuild
BLACKLIST45/cairomm/: cairomm.SlackBuild
BLACKLIST45/gi-docgen/: .sh  gi-docgen.SlackBuild
BLACKLIST45/gjs/: gjs.SlackBuild
BLACKLIST45/glib-networking/: glib-networking.SlackBuild
BLACKLIST45/glib2/: glib2.SlackBuild
BLACKLIST45/glibmm/: glibmm.SlackBuild
BLACKLIST45/gobject-introspection/: 394.patch  gobject-introspection.SlackBuild
BLACKLIST45/graphviz/: graphviz.SlackBuild
BLACKLIST45/gtkmm4/: gtkmm4.SlackBuild
BLACKLIST45/gvfs/: gvfs.SlackBuild
BLACKLIST45/librsvg/: librsvg.SlackBuild  slack-required
BLACKLIST45/libsoup3/: libsoup3.SlackBuild
BLACKLIST45/mm-common/: mm-common.SlackBuild
BLACKLIST45/mozjs115/: mozjs115.SlackBuild
BLACKLIST45/order/: 04-build_mozjs115.sh  04-build_mozjs115.sh~  05-build_gjs.sh  05-build_python3-typogrify.sh  06-build_libsoup3.sh  06-build_python3-toml.sh  07-build_at_spi2_core.sh  08-build_cairo.sh  08-build_librsvg.sh  09-build_pango.sh  10-build_gvfs.sh  11-build_glib-networking.sh  13-build_adwaita_icon_theme.sh  14-build_pangomm.sh  15-build_glibmm.sh  16-build_cairomm.sh
BLACKLIST45/order_blacklist/: .04-build_mozjs115.sh.un~  01-build_gtk4.sh  02-build_glib2.sh  03-build_gobject_introspection.sh  05-build_python3-smartypants.sh  07-build_at_spi2_core.sh  07-build_gi-docgen.sh  08-build_librsvg.sh  10-build_gvfs.sh  13-build-graphviz.sh  14-build_pangomm.sh  18-build_gtkmm4.sh
BLACKLIST45/pango/: pango.SlackBuild
BLACKLIST45/pangomm/: pangomm.SlackBuild
BLACKLIST45/python3-smartypants/: .sh  python3-smartypants.SlackBuild
BLACKLIST45/python3-toml/: .sh  python3-toml.SlackBuild
BLACKLIST45/python3-typogrify/: .sh  python3-typogrify.SlackBuild
VRR/gnome-control-center-vrr/: .sh  gnome-control-center-vrr.SlackBuild  slack-desc
VRR/mutter-vrr/: .sh  mutter-vrr.SlackBuild  slack-desc  slack-required  vrr.patch
backgrounds/gnome-backgrounds-extra/: gnome-backgrounds-extra.SlackBuild
backgrounds/order/: 01-build_gnome-backgrounds-extra.sh  build_all.sh
doinst/: doinst
extensions/gnome-shell-extension-appindicator/: gnome-shell-extension-appindicator.SlackBuild
extensions/gnome-shell-extension-arc-menu/: gnome-shell-extension-arc-menu.SlackBuild
extensions/gnome-shell-extension-autohide-battery/: gnome-shell-extension-autohide-battery.SlackBuild
extensions/gnome-shell-extension-coverflow-alt-tab/: gnome-shell-extension-coverflow-alt-tab.SlackBuild
extensions/gnome-shell-extension-cpufreq/: gnome-shell-extension-cpufreq.SlackBuild
extensions/gnome-shell-extension-dash-to-dock/: gnome-shell-extension-dash-to-dock.SlackBuild
extensions/gnome-shell-extension-dash-to-panel/: 1939.patch  gnome-shell-extension-dash-to-panel.SlackBuild
extensions/gnome-shell-extension-desktop-icons-ng/: gnome-shell-extension-desktop-icons-ng.SlackBuild
extensions/gnome-shell-extension-eortologio/: 5.patch  gnome-shell-extension-eortologio.SlackBuild
extensions/gnome-shell-extension-overview-feature-pack/: gnome-shell-extension-overview-feature-pack.SlackBuild  slack-desc
extensions/gnome-shell-extension-show-desktop/: doinst.sh  gnome-shell-extension-show-desktop.SlackBuild
extensions/gnome-shell-extension-tray-icons-reloaded/: gnome-shell-extension-tray-icons-reloaded.SlackBuild
extensions/gnome-shell-extension-webfeed/: gnome-shell-extension-webfeed.SlackBuild
extensions/order/: 01-build_gnome-shell-extension-appindicator.sh  02-build_gnome-shell-extension-arc-menu.sh  03-build_gnome-shell-extension-autohide-battery.sh  04-build_gnome-shell-extension-coverflow-alt-tab.sh  05-build_gnome-shell-extension-cpufreq.sh  06-build_gnome-shell-extension-dash-to-dock.sh  07-build_gnome-shell-extension-dash-to-panel.sh  08-build_gnome-shell-extension-desktop-icons-ng.sh  09-build_gnome-shell-extension-eortologio.sh  10-build_gnome-shell-extension-overview-feature-pack.sh  11-build_gnome-shell-extension-show-desktop.sh  12-build_gnome-shell-extension-tray-icons-reloaded.sh  13-build_gnome-shell-extension-webfeed.sh
extras/boxes/libcacard/libcacard-2.8.1/: .version  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  aminclude_static.am  config.h.in  configure  configure.ac  libcacard.pc.in  meson.build  meson_options.txt
extras/boxes/libcacard/libcacard-2.8.1/build-aux/: glib-tap.mk  meson-dist
extras/boxes/libcacard/libcacard-2.8.1/docs/: libcacard.txt
extras/boxes/libcacard/libcacard-2.8.1/fuzz/: fuzz_options.c  fuzz_simpletlv.c  fuzz_xfer.c  fuzzer.c  fuzzer.h  meson.build
extras/boxes/libcacard/libcacard-2.8.1/fuzz/corpora/fuzz_options/: test
extras/boxes/libcacard/libcacard-2.8.1/fuzz/corpora/fuzz_simpletlv/: test
extras/boxes/libcacard/libcacard-2.8.1/fuzz/corpora/fuzz_xfer/: test
extras/boxes/libcacard/libcacard-2.8.1/fuzz/db/: key4.db
extras/boxes/libcacard/libcacard-2.8.1/src/: Makefile.in  cac-aca.c  cac-aca.h  cac.c  cac.h  capcsc.c  card_7816.c  card_7816.h  common.c  common.h  event.c  eventt.h  gp.c  gp.h  libcacard.h  libcacard.map  msft.c  msft.h  simpletlv.c  simpletlv.h  vcard.c  vcard.h  vcard_emul.h  vcard_emul_nss.c  vcard_emul_type.c  vcard_emul_type.h  vcardt.h  vevent.h  vreader.c  vscard_common.h  vscclient.c
extras/boxes/libcacard/libcacard-2.8.1/tests/: common.c  common.h  db.crypt  hwtests.c  initialize.c  libcacard.c  meson.build  setup-softhsm2.sh  simpletlv.c
extras/boxes/libcacard/libcacard-2.8.1/tests/db/: cert9.db
extras/order/: 001-build_boxes.sh  (+2 more)
gnome/cmark/: .sh  (+1 more)
proxeiro/: CHECK-REPOS.sh  sh_creator.sh  special.sh
(+1242 files in other folders)
